--- a/2022-02-01/homework.html
+++ b/2022-02-01/homework.html
@@ -40,7 +40,9 @@
         <p id="number2"></p>
         <p id="number3"></p>
     </div>
+    <div>
 
+    </div>
     <script type="text/javascript" src="./assets 5,6uzd/js/homework.js"></script>
 </body>
 </html>
